# dbmigrt

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
app/: __init__.py  __main__.py  cli.py  ordering.py
app/destinations/: CLAUDE.md  __init__.py  base.py  mssql.py
app/sources/: CLAUDE.md  __init__.py  base.py  mysql.py
docker/e2e/: README.md  docker-compose.yml
docker/e2e/mysql/: init.sql
docker/e2e/runner/: Dockerfile  run_test.py
docs/: SDD.md  build_pdf.py
tests/: test_export_sqlite.py
